# odin

./: .bazelproject  .bazelrc  .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD  MODULE.bazel  README.md  WORKSPACE  deps.bzl  environment.yml  extensions.bzl  repositories.bzl  requirements.txt
.clwb/: .bazelproject
bazel-bin/src/python/: foo_test
bazel-bin/src/python/_objs/pydin.so/: pydin.pic.d
bazel/rules/: gsl.bzl
bazel/tools/: build_rules.bzl  conda_env.bzl  conda_env2.bzl
benchmarks/: BUILD  benchmark_matrix_inversion.cpp
dev/: BUILDpydinold  README-base.md  SHARMLib.cpp  SHARMLib.h  bazel_autodiff.BUILD  cmake_eigen.BUILD  cpp_error_simplifier.py  environment.yml  spherical_harmonic.hpp  spherical_harmonics.hpp  test_eigen.cpp
dev/dev_apple/: BUILD  add.metal  main1.cpp  metal_adder.cpp  metal_adder.hpp  notes.md
dev/tracker/: comparators.hpp  container_policy-old.hpp  container_policy.hpp  memory_policy.hpp
examples/: BUILD  dev.cpp  example_autodiff_stts.cpp  example_dev_autodiff.cpp  mcts_tictactoe.cpp  t.md
examples/gravitational_models/: BUILD  gravity_autodiff.cpp  plot.py  plot2.py  plot3.py  plot_orbit.py  sh_jgm_3.cpp  spherical_harmonics.cpp  tri_axial_ellipsoidal_1.cpp  tri_axial_ellipsoidal_2.cpp  tri_axial_ellipsoidal_orbit-old.cpp  tri_axial_ellipsoidal_orbit.cpp
examples/gtoc12/: BUILD  initial_experiments.cpp
examples/kalman_filtering/: BUILD  main.cpp  plot.py
examples/kleopatra_216/: BUILD  main.cpp  plot.py
examples/optimization/: BUILD  main.cpp
extensions/: BUILD.bazel  deps.bzl
gtoc/: a_covariance.py  b_prelims.py  clustered_2d.py  clustered_2d_2.py  dendogram.py  linkage_matrix.csv  linkage_matrix.json  linkage_read.py  main.py  output.csv
include/odin/: common.h  concepts.hpp  constants.h  constants.hpp  eigen.h  eigen.hpp  io.hpp  kalman.hpp  library.hpp  logging.hpp  random.hpp  tracker.hpp  units.hpp  utility.hpp  vectorize-skpt.hpp  vectorize.hpp
include/odin/algorithm/: marching_cubes_octree.h
include/odin/core/: core.hpp  kep.hpp  logging.hpp  point.h
include/odin/core/frames/: rotation_matrix_generator.hpp
include/odin/core/history/: history.hpp
include/odin/core/numerics/integrators/: base_integrator.hpp  butcher_tableau.hpp  event_policy.hpp  runge_kutta.hpp  t.md
include/odin/core/policy/: cache.hpp  serialization.hpp
include/odin/core/policy/container/: container_policy.hpp  stl_associative_container_policy.hpp  stl_sequence_container_policy.hpp
include/odin/core/policy/memory/: default_memory_policy.hpp  memory_policy.hpp  protobuff_memory_policy.hpp
include/odin/core/policy/serialization/: basic_serialization_policy.hpp  eigen_serialization_policy.hpp  serialization_policy.hpp
include/odin/core/tracker/: criteria.hpp  tracker.hpp
include/odin/domain/: astrodynamics.hpp
include/odin/domain/astrodynamics/: elements.hpp  keplerian.hpp
include/odin/eigen/: inversion_policy.hpp  point_impl.h
include/odin/estimation/: design.md  estimation_handler.hpp  scratch.cpp
include/odin/estimation/filters/: base_filter.hpp  base_python.hpp  filters.hpp  kalman_unscented.hpp  scartch.md
include/odin/models/: gravity.h  shape.h
include/odin/models/error/: bias.hpp  noise.hpp
include/odin/models/gravitational/: ellipsoidal.hpp  gravitational_base.hpp  gravitational_concept.hpp  gsl.hpp  polyhedral.hpp  spherical.hpp
include/odin/models/measurement/: angle_measurement_model.hpp  doppler_shift_measurement.hpp  landmark_tracking_model.hpp  measurement.hpp  measurement_model-old-2.hpp  measurement_model-old.hpp  measurement_model.hpp  two_way_range_model.hpp
include/odin/models/measurement/camera/: test.py
include/odin/models/shape/: algorithms.h  ellipsoid.h  ellipsoid_impl.h  polyhedron.h  shape_base.h  shape_concepts.h  sphere.h  sphere_impl.h
include/odin/models/shape/algorithms/: ellipsoid_plane_intersection-old.h  ellipsoid_plane_intersection-old2.h  ellipsoid_plane_intersection.h  ellipsoid_plane_intersection.metal  smoothing.h
include/odin/models/shape/mesh/: face_vertex.h  face_vertex_impl.h  marching_cubes.h  mesh_base.h
include/odin/optimization/tree/: base.hpp  dfs.hpp  mcts-new-old.hpp  mcts-old.hpp  mcts.aaaahpp  mcts.hpp  mcts2.hpp  mcts_serialization.hpp
include/odin/parallel/: grid.hpp  parallel.hpp  parallel_concepts.hpp  series.hpp
include/odin/parameter/: parameter_handler.hpp
include/odin/state/: entity.hpp  process_model.hpp  state.hpp  state_handler-PRE_REFACTOR.hpp  state_handler.hpp  state_types.hpp  state_variant_handler.hpp
include/odin/stdlib/: point_impl.h
include/odin/tree/: base.hpp  resource.hpp  search-ckp1.hpp  search.hpp  serialization.hpp  traversing.hpp
include/odin/utilities/: sigma_point_calculator.hpp
notes/: CompileTimeComputations_Notes.md  FloatingPointPrecision_Notes.md  Logging_Policy.md  MCTS.md  MatrixInversion_Notes.md  MeasurementErrorModel_Strategies.md  MemoryAccessOrganisation_Notes.md  OneTBB_Patterns.md  notes.md
notes/ellipsoid/: ellipsoid_1.py  ellipsoid_2.py  requirements.txt
notes/gtoc12/: Initial.md
scripts/: BUILD  generate_directory_headers.py  generate_global_header.py  run_configurations.sh
src/: BUILD  main.cpp  main.cu  thrust.cu
tests/: BUILD  CMakeLists.txt  test_parallel.cpp  test_tree.cpp  test_vectorize.cpp
tests/test_core/: BUILD  test_container_policy.cpp  test_history.cpp  test_inverse.cpp  test_rotation_matrix_generator.cpp  test_runge_kutta.cpp  test_runge_kutta_embedded.cpp  test_serialization_policy.cpp  test_tracker.cpp
tests/test_domain/: BUILD  test_astrodynamics.cpp
tests/test_estimation/: test_filters.cpp  test_kalman.cpp  test_sigma_points.cpp  test_ukf.cpp
tests/test_external/: BUILD  test_autodiff.cpp  test_cereal.cpp  test_tbb.cpp
tests/test_linalg/: test_basics.cpp
tests/test_models/: BUILD
tests/test_models/test_gravitation/: BUILD  test_tri_axial_ellipsoid.cpp
tests/test_models/test_measurement/: test_measurement.cpp
tests/test_state/: test_state.cpp  test_state_handler.cpp
units/: .clang-format  CMakeLists.txt  conversion.hpp  main.cpp
(+1 files in other folders)
